Fixed overflow of the preview area

--- a/interface/src/App.module.scss
+++ b/interface/src/App.module.scss
@@ -25,6 +25,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    min-height: 0;
 }
 
 .middleContainer {
